--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^10.0.27",
     "axios": "^0.19.2",
     "babel-plugin-emotion": "^10.0.33",
+    "formik": "^2.1.5",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yup": "^0.29.1"
   }
 }
