--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.19.2",
     "babel-plugin-emotion": "^10.0.33",
     "formik": "^2.1.5",
+    "framer-motion": "^2.6.5",
     "next": "9.4.4",
     "paypal-checkout": "^4.0.315",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-dropzone": "^11.0.2",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-transition-group": "^4.4.1",
     "yup": "^0.29.1"
   }
 }
