--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "babel-plugin-emotion": "^10.0.33",
     "formik": "^2.1.5",
